# django-test

./: Dockerfile  docker-compose.yml  pyproject.toml
api/api/: settings.py  urls.py
api/polls/: views.py
