[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["tainahcarvalho21 <tainah.carvalho@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "*"
Django = "^4.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
